Added Models, Interfaces, Services for buisness layer

--- a/Ecommerce/Ecommerce.csproj
+++ b/Ecommerce/Ecommerce.csproj
@@ -21,6 +21,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\DataAccessLayer\DataAccessLayer.csproj" />
+    <ProjectReference Include="..\Service Layer\Service Layer.csproj" />
   </ItemGroup>
 
 </Project>
